mini bug home button z-index solved

--- a/src/css/btn-calcola/btn-calcola.css
+++ b/src/css/btn-calcola/btn-calcola.css
@@ -1,5 +1,5 @@
 #btn-form {
-    width: calc(100% - 2rem);
+    width: calc(100% - 5rem);
     max-width: 725px;
     height: 4rem;
     font-size: 1.5rem;
@@ -33,6 +33,6 @@
     width: 100%;
     height: 6em;
     box-sizing: border-box;
-    z-index: 9999;
+    z-index: 99;
     background: linear-gradient(0deg, rgba(200, 230, 255, 0.95), rgba(200, 230, 255, 0.95), rgba(200, 230, 255, 0.95), rgb(200, 230, 255, 0.95), rgb(200, 230, 255, 0.95), rgba(200, 230, 255, 0.95), transparent);
 }
