--- a/src/css/footer/footer.css
+++ b/src/css/footer/footer.css
@@ -9,6 +9,7 @@
     display: grid;
     grid-auto-flow: column;
     width: 100%;
+    z-index: 999;
 }
 
 #footer-made a {
